<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <data>-->
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.cs4520.assignment3.MVVMViewModel" />-->
<!--    </data>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#C4b8E1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number1"
            android:inputType="numberDecimal"
            android:textColorHighlight="@color/design_default_color_secondary"
            android:id="@+id/number1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number2"
            android:inputType="numberDecimal"
            android:textColorHighlight="@color/design_default_color_secondary"
            android:id="@+id/number2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:id="@+id/result"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:id="@+id/subtract_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:id="@+id/multiply_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:id="@+id/divide_button"/>


    </LinearLayout>

</layout>